fix opacity problem on mobile

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -32,7 +32,7 @@ html, body {
 }
 
 .computer-frame-container {
-    transform-origin: top left;
+    transform-origin: center;
     position: relative;
     width: 100%; /* or 100%, or whatever you want */
     margin: 0;
@@ -46,6 +46,7 @@ html, body {
 
 
 .screen-content {
+  margin: 0;
   width: 100%;
   position: absolute;
   top: 12.5%;    /* 1/8 */
@@ -61,9 +62,9 @@ html, body {
 .w {
   position: relative;
   z-index: 2;
-  padding: 0;
   width: 100%;
   height: 100%;
+  padding: 0;
   box-sizing: border-box;
 }
 
@@ -72,14 +73,14 @@ html, body {
     top: 0; left: 0; width: 100%; height: 100%;
     pointer-events: none;
     z-index: 4;
-    opacity: 0.3; /* Adjust for desired strength */
+    opacity: 1; /* Adjust for desired strength */
     mix-blend-mode: screen; /* Try 'lighten', 'overlay', etc. for different effects */
     transform: scale(1.25);
     transform-origin: center center;
   }
 
 .w-content {
-  margin: 6.25%;
+  padding: 0 5%;
   width: 100%;
   height: 100%;
   box-sizing: border-box;
